# ADS-509_LLM

./: .gitignore  README.md  decisions.md  evaluation.ipynb  fine_tuning.ipynb  fine_tuning_script.ipynb  labeling_time.ipynb  main_notebook.ipynb  notes_to_self.txt  project_pipeline.md  pyproject.toml  reddit_scrape.ipynb  reddit_scraper.py  resources.txt
Tommy's Work Space/: MSADS - 509 Final Project Notebook.ipynb  youtube_comments 02.08.2026.csv  youtube_geopolitical_comments 01.29.2026.csv
data/: bluesky_main.csv  final_meta_comments.csv  final_meta_main.csv  gemini_comments_labeled_p2.csv  gemini_debug_responses.json  gemini_job_names.json  gemini_labeling.ipynb  hn_main.csv  labels.md  metafilter_comments.csv  metafilter_main.csv  negative_examples.xlsx  reddit_comments.csv  reddit_main.csv  sample_labels.csv  youtube_videos.csv
data/self_labeling/: sample.csv
eda_logs/Hacker News/: Hacker News_20260209_150746_summary.json
eda_logs/Metafilter/: Metafilter_20260209_133804_summary.json
eda_logs/Reddit/: Reddit_20260220_205217_comments_enriched.csv  Reddit_20260220_205217_summary.json
eda_notebooks/: bluesky_eda.ipynb  full_data_set_eda.ipynb  hacker_news_eda.ipynb  metafilter_eda.ipynb  reddit_eda.ipynb
labeling/: batch_id.txt  batch_mapping.json  claude_labeling.ipynb  gemini_debug_responses.json  gemini_job_names.json  gemini_labeling.ipynb  labeling_time.ipynb  openai_batch_errors.jsonl  openai_batch_id.txt  openai_batch_mapping.json  openai_batch_results.jsonl  openai_labeling.ipynb
scripts/: bluesky-scrape-Cel-PC.ipynb  bluesky-scrape.ipynb  bluesky_main.csv  bluesky_main_all_col.csv  bluesky_scrape.ipynb  bsky_threads_TEST.jsonl  bsky_threads_from_jsonl.csv  failed_uris.csv  failed_uris.json  hn_scrape.py  metafilter_scrape.py  missing_uris.csv  missing_uris.json  reddit_scrape.py  youtube_scrape.ipynb  youtube_scrape.py
utils/: hn_date_convert.py  initial_eda.py  metafilter_date_convert.py  preprocessing_script.py  pretrain_script.py  probabilites.py  self_labeling.py  sleepy.py
