[project]
name = "ads-509-llm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "April Chia", email = "achia@sandiego.edu" },
    { name = "Taylor Kirk", email = "tkirk@sandiego.edu" },
    { name = "Tommy Baron", email = "tbarron@sandiego.edu" },
    { name = "Celina Velazquez", email = "celinavelazquez@sandiego.edu" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "datetime>=6.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "textblob>=0.19.0",
    "textstat>=0.7.12",
]
